Now builds with Cocoapods

--- a/SnapChatRoulette/SnapChatRoulette-Info.plist
+++ b/SnapChatRoulette/SnapChatRoulette-Info.plist
@@ -30,6 +30,24 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>FacebookAppID</key>
+	<string>1474408296121918
+1474408296121918
+</string>
+	<key>FacebookDisplayName</key>
+	<string>SnapChatRoulette</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb1474408296121918
+fb1474408296121918
+1474408296121918
+</string>
+			</array>
+		</dict>
+	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
