Facebook login works

--- a/SnapChatRoulette/SnapChatRoulette-Info.plist
+++ b/SnapChatRoulette/SnapChatRoulette-Info.plist
@@ -20,8 +20,21 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb1474408296121918</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>FacebookAppID</key>
+	<string>1474408296121918</string>
+	<key>FacebookDisplayName</key>
+	<string>SnapChatRoulette</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
@@ -29,24 +42,6 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
-	</array>
-	<key>FacebookAppID</key>
-	<string>1474408296121918
-1474408296121918
-</string>
-	<key>FacebookDisplayName</key>
-	<string>SnapChatRoulette</string>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>fb1474408296121918
-fb1474408296121918
-1474408296121918
-</string>
-			</array>
-		</dict>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
